--- a/src/components/AboutEnterprise/styles.module.scss
+++ b/src/components/AboutEnterprise/styles.module.scss
@@ -1,7 +1,9 @@
 .aboutEnterprise{
-    margin-top: 5rem;
     .aboutImg{
-        max-height: 200px;
+        position: relative;
+        margin: 0 auto;
+        width: 75%;
+        height: 200px;
     }
     .medias{
         cursor: pointer;
