feat: Navigation fade

--- a/src/components/Navigation/styles.module.scss
+++ b/src/components/Navigation/styles.module.scss
@@ -1,3 +1,8 @@
 .navigation{
     min-height: 10vh;
+    opacity: 0;
+    &.on{
+        opacity: 1;
+    }
+    transition: opacity ease-in .5s;
 }
