--- a/src/components/ScrollTop/styles.module.scss
+++ b/src/components/ScrollTop/styles.module.scss
@@ -5,4 +5,10 @@
         position: fixed;
         right: 0;
         bottom: 0;
+
+        opacity: 0;
+        &.on{
+            opacity: 1;
+        }
+        transition: opacity ease-in .5s;
 }
