--- a/src/components/Layout/styles.module.scss
+++ b/src/components/Layout/styles.module.scss
@@ -3,5 +3,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  overflow: hidden;
+  scroll-snap-align: center;
+
+.anchor{
+  display: block;
+  position: relative;
+  visibility: hidden;
+  top: -66px;
 }
+}
+
