--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,6 @@
 html,
 body {
+  scroll-behavior: smooth;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
@@ -16,4 +17,11 @@ a {
   box-sizing: border-box;
 }
 
+.defaultContainer{
+    display: flex; 
+    justify-content: flex-end; 
+    align-items: center;
+    flex-direction: column;
+    height: 100%;
+}
 
