Menu e Projeto Layouts OK

--- a/src/components/AboutEnterprise/styles.module.scss
+++ b/src/components/AboutEnterprise/styles.module.scss
@@ -1,5 +1,6 @@
 .aboutEnterprise{
     justify-content: center; 
+    padding-top: 6rem;
     .aboutImg{
         position: relative;
         margin: 0 auto;
