--- a/src/components/Welcome/styles.module.scss
+++ b/src/components/Welcome/styles.module.scss
@@ -1,11 +1,21 @@
 .welcome{
-    background: rgb(33,37,41);
+    background: #212529;
     height: 100%;
+
+    &::-webkit-scrollbar {
+        width: 0px;
+    }
+
     .stack{
         height: 100vh
     }
     .arrowDown{
         filter: invert(100%); 
+        animation-name: bounceDown;
+        animation-duration:1.8s;
+        animation-iteration-count:infinite;
+        animation-timing-function:cubic-bezier(0.455, 0.03, 0.515, 0.955);
+
         &:hover{
             transform: scale(1.5);
            
@@ -15,3 +25,10 @@
     }
 }
 
+
+@keyframes bounceDown {
+    0% {opacity: 1; margin-top: 0px; }
+    25%{opacity: 0; margin-top: 10px; }
+    26%{opacity: 0; margin-top: -10px; }
+    55% {opacity: 1; margin-top: 0px; }
+  }
