--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,9 +3,14 @@ body {
   scroll-behavior: smooth;
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Open Sans', sans-serif;
   background-color: var(--bs-gray-100) !important;
+
+  
+}
+
+::-webkit-scrollbar {
+  width: 0px;
 }
 
 a {
