--- a/src/components/Navigation/styles.module.scss
+++ b/src/components/Navigation/styles.module.scss
@@ -22,6 +22,25 @@
                
                color: white!important;
                font-size: 18px;
+               cursor: pointer;
+                &::after {
+                        display:block;
+                        content: '';
+                        border-bottom: solid 2px var(--bs-gray-100);  
+                        transform: scaleX(0);  
+                        transition: transform 250ms ease-in-out;
+                       
+                    }
+                
+                &:hover{
+                    color: white;
+                    &::after { 
+                        transform: scaleX(1); 
+                        
+                    }
+                }
+
+                transition: all .35s ease-in-out;
              }
          }
      }
