--- a/src/components/Projects/styles.module.scss
+++ b/src/components/Projects/styles.module.scss
@@ -1,24 +1,46 @@
 
 .seeMore{
-    width: 165px;
+    background-color: #212529;
+    border-color: #212529;
+    border-radius: 2px;
+   
     text-align: left;
-    span{
-        text-align: left;
-        padding-left: 8px;
-        font-size: 18px;
-        bottom: 0;
-        animation-name: bounceLeft;
-        animation-duration:3.5s;
-        animation-iteration-count:infinite;
-        animation-timing-function:cubic-bezier(0.455, 0.03, 0.515, 0.955)
+
+    &:hover{
+        background-color: #212529;
+        border-color: #212529;
+        border-radius: 2px;
+        a{
+            color: white;
+        }
+       
+        transform: scale(1.1);
+        transition: transform 0.2s ease-in;
     }
+
+    a{
+        width: 175px;
+        span{
+            text-align: left;
+            padding-left: 8px;
+            font-size: 18px;
+            animation-name: bounceLeft;
+            animation-duration:2.5s;
+            animation-iteration-count:infinite;
+            animation-timing-function:cubic-bezier(0.455, 0.03, 0.515, 0.955);
+        
+          
+        }
+    }
+    
+    
 }
 
 
 @keyframes bounceLeft {
-    0% {padding-left: 8px; }
-    25%{padding-left: 14px; }
-    26%{padding-left: -14px; }
-    55% {padding-left: 8px; }
+    0% {opacity:1; padding-left: 8px; }
+    25%{opacity:0;padding-left: 14px; }
+    26%{opacity:0;padding-left: -14px; }
+    55% {opacity:1;padding-left: 8px; }
   }
   
