--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -26,7 +26,7 @@
                 &::after {
                     display:block;
                     content: '';
-                    border-bottom: solid 2px var(--bs-gray-100);  
+                    border-bottom: solid 2px #f8f9fa;  
                     transform: scaleX(0);  
                     transition: transform 250ms ease-in-out;
                     transform-origin:  0% 50%; 
